# ChangeLog for media-sound/qtractor
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/qtractor/ChangeLog,v 1.61 2015/01/29 18:56:04 mgorny Exp $

  29 Jan 2015; Michał Górny <mgorny@gentoo.org> qtractor-0.6.3.ebuild,
  qtractor-0.6.4.ebuild:
  Switch to CPU_FLAGS_X86.

*qtractor-0.6.4 (03 Dec 2014)

  03 Dec 2014; Alexis Ballier <aballier@gentoo.org> +qtractor-0.6.4.ebuild:
  version bump

  03 Dec 2014; Alexis Ballier <aballier@gentoo.org> qtractor-0.6.3.ebuild:
  bump lilv dep, bug #505332 by Jyrki Launonen

  03 Dec 2014; Alexis Ballier <aballier@gentoo.org> -qtractor-0.5.9.ebuild,
  -qtractor-0.5.10.ebuild, -qtractor-0.5.12.ebuild, -qtractor-0.6.0.ebuild:
  remove old

*qtractor-0.6.3 (02 Nov 2014)

  02 Nov 2014; Alexis Ballier <aballier@gentoo.org> +qtractor-0.6.3.ebuild:
  version bump

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> qtractor-0.5.10.ebuild,
  qtractor-0.5.12.ebuild, qtractor-0.5.9.ebuild, qtractor-0.6.0.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*qtractor-0.6.0 (16 Apr 2014)

  16 Apr 2014; Alexis Ballier <aballier@gentoo.org> +qtractor-0.6.0.ebuild:
  version bump

*qtractor-0.5.12 (18 Jan 2014)

  18 Jan 2014; Alexis Ballier <aballier@gentoo.org> +qtractor-0.5.12.ebuild:
  version bump

*qtractor-0.5.10 (25 Jul 2013)

  25 Jul 2013; Alexis Ballier <aballier@gentoo.org> +qtractor-0.5.10.ebuild:
  version bump

  25 Jul 2013; Alexis Ballier <aballier@gentoo.org> -qtractor-0.5.4.ebuild,
  -qtractor-0.5.5.ebuild, -qtractor-0.5.6.ebuild, -qtractor-0.5.7.ebuild,
  -qtractor-0.5.8.ebuild:
  remove old

*qtractor-0.5.9 (12 Jun 2013)

  12 Jun 2013; Alexis Ballier <aballier@gentoo.org> +qtractor-0.5.9.ebuild:
  version bump

*qtractor-0.5.8 (25 Mar 2013)

  25 Mar 2013; Alexis Ballier <aballier@gentoo.org> +qtractor-0.5.8.ebuild:
  version bump

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> qtractor-0.5.4.ebuild,