@@ -3,26 +3,16 @@ Hash: SHA256
 
 DIST qtractor-0.6.3.tar.gz 1380485 SHA256 82e96718964c8dca8f7f2a08483e4500fa5c6e37110ae0d658df3db8076a55d3 SHA512 4615a10f6a223d20f2a8e7b1b2ac43285d96f47fadd6d4e9cbdc07d115e94651568ed942b8b5825a687d78bfe47b8f84b998ca6cfba0b8048b71b5f2913f2ff0 WHIRLPOOL 0f8a97caed1736b603b74513608e3e89c4a4f3237323c4e5f943ae9d1ee89aff2f4511d7536cccd400c8a784c5bcabe9f1d19f8fd8840ae6eecbec7f668c5176
 DIST qtractor-0.6.4.tar.gz 1377713 SHA256 e4f3c792b72e96a0d323b3b4bb1c849edab1363a70a9369369afe79a3a4bf5f1 SHA512 75e7a2bd831b3a5f70dfb21b16111ac61cc06d5832a49f13c16b8ae59079a950ca4242a1cdf3d0c082419fbfbc2f67dfeb9de8e68a604ec9f732934a16203a43 WHIRLPOOL 17ee3b9549089b2b2feb30984f054b3d70acc5eaccb1ae4dee04258693d26a87bdc814478f4f481eb179c3be2196dba78bb18bef778527bff802be1a1f1b04f6
+DIST qtractor-0.6.5.tar.gz 1384981 SHA256 c07d5a3a4c561690939341f9fe9da550458503b81854a31eac767e952ea8d07e SHA512 ea3170435d6e956d91f0433fbc03e12421ff40a7cf495ab33c2cff84d1bac15ee9cbf9eec90adba6c0d4d6437474eeece95169b27ff0d79c0086966c71579c84 WHIRLPOOL 2be66ce765708f38ba1891a26c6c4c1eda2f87e7b2dff52f85b52d32f6241ada8d11def4997b9941f5c3ea7563d7806f59f336d41c89cf790d9567612015a2d6
 EBUILD qtractor-0.6.3.ebuild 1459 SHA256 0d2047934eec38e92fcae43b784be63f3c3832b7215d187e4f7e039b93a6c954 SHA512 d2da7fb61550914dbd098a58c1aa9cb0dae8bb3ea54a3523ad3c22184d17337cd01af9db171e671db0805460a8b0db7967f038cba57e271492576a40e25d34f8 WHIRLPOOL 9e394b67127ed20a266c26179c24e8e0fbb5f58d6f82b20d4cd91499facbfb06a76ccd985e64da378069a34fa80a6db3f31ff32a608e09de2d02220d62a344ec
 EBUILD qtractor-0.6.4.ebuild 1459 SHA256 ab7e0fe4ddcfd06484cab6186a60ff3b6de4a96961c6e60241851b8e4f2c56ad SHA512 0ebf8f81b587731502a6844ff0ddac8a5e0c6b51cef035aa3950e66b14d25c9a45c6aa4524668e9e019b336a3e53a66d42db18eb7bf2c3f15af9c44515ebe92b WHIRLPOOL 7daea0ed94f1b249844763e3d1eef53f15799e0aa7307ff1ea9398593d01570eeea166b3525d2027fc6a21513b1cd97001cad639ecc4bd39aac6a0085b6a80c8
-MISC ChangeLog 8765 SHA256 7557ed6829b4ec5db9ab8d304c5016e5f283094abb2e2ced19fc86d440354b07 SHA512 71a420a3b6fd014b4c6420ae2cf6aa184168dcbd79d080b42c4d3ca9efad7ee014f68f4b308270e3eaba6c987ce9f3413cb583317857fd056bd469fc6e3b0eb1 WHIRLPOOL 881bb83a12062d3f95faa3aa45dace0e083a913d54dcb261ebba61cfc2e0f7edec73137891c4be0b95be0a6716eb67357cf57fc13760dd13a66bce1d8c6dcce6
+EBUILD qtractor-0.6.5.ebuild 1461 SHA256 38f95a0dbf8f7c345d3b09e55f146dea4daa9f394b8fb130718e959b08882bc9 SHA512 f806a4bf1c959b45007d6b02cec78715e67eb6b0ae83ef2fc73a8d6b9d7ca15811848a886b1a634c44b1d0765f76d24e7bf67db8524d00c8bcd7c9ddb2577c30 WHIRLPOOL 70054ef6acfecaff2944b0119d14eba8ff75baa5b1d0373eff1a9268c122c06cc60c382c6975501e3c3c5974a22a0dcd177e4fa31e1d23a54810e615b1a2ed38
+MISC ChangeLog 8890 SHA256 bbc37d126a47ba814185c12fb847f3bac1196cc5e6703ebf0cd166f5ec999d5c SHA512 63457e673118a4862788481ba601a43db85963cc23909c99f1d9a86dc3fca8acc5f2e0a344e610abdba372f1934232e1c45839efcbfe23ae6d3951a028910eec WHIRLPOOL 657139b4bd51abdaec51499ce6fdfd3dec916ad617e321afdd48447ece726b01e5a02a9de6665faa790b1114c013eff8ece055013f547a7ddb2130b60392ceda
 MISC metadata.xml 374 SHA256 7a5f1a60b6ea09ac7331596bb1da9c53bdd13400bbba3d9491f8fa726c78b22c SHA512 ef9cf813a1ef381b966c16b71eb7aeb854c9af416df5ccd6d1684ffb309973cbc39ea4146ad87f2cd47beeadaaae0f7bd0ac6f5902a4fcb5f66abca3af158a38 WHIRLPOOL 9fe922bac4f89449dd702cf181510a57d435dcd2c6e61c4bcb6a22d8d99066eb82ca4542472594c323d924439ae8f9469c28615796d0f52df2a140cd80b424b8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUyoJFXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO07cQAJbPpsanPWL1Pyb1heAew8mu
-HwvvRLrqOW6T9EIfx9btX36VAoOjH0LYg1wMXd1VrZpEGUfTrbR+VLgreLhENEFQ
-jksVsJf/XS4hlEQb/5LXPa6fV8HWhmF33x+K6apheNC1cOHUvq4UJsLIpT66NGG0
-NQoDwOfrcwxgW9/PpELBY//ZJnW6StKLuRaGbcj3ikapOZ3NVQGbJsSLPVq24tr9
-E6NQBOI1nHGenBohlj7d68BjMRGvFG6u3GlB1/J7Q0m27JiFNZMBYaUL2acRqauy
-DUL8T2Rw2dHLWFAOC02x37jSjHCqH3WOGKuNEvqWsnzS5kF39TnJVAJtuENf5B0Z
-rmHmBV75HKTQAAEwlsfdnJgUO2d520MfLpZaeUIBWQUyBwjAbpY6iq2LrG52tDcq
-+vcu8e3AhL+OCGG/oDxHzViurutU6K4zTkLbckAZ7kGGZJwhcPjPAj+ufZpyxnrE
-DPa/gUeU0TGlSQG1onbofbQ1z6iSgyd4uJoIGT1WFulIZpZ0JHV+Pa5zlyqU20ig
-Dt0nnfsaS/Vxs1fY+gCGEMYk0nxVZtGQr86z55Iom9A3l8CvxOdwERmTEBmOWsbp
-ZYm5oFJr3AHjmcQi9Z3zlBZTfuYMPugYyjrM3O6rV6ph7E1ZEPNReonsz3MWxA5L
-p7PbQy1SXKwJas+RRZNV
-=nQ+r
+iEYEAREIAAYFAlTPwTkACgkQvFcC4BYPU0prpACfZc2eV9kYjvR+Rnen/WRA9und
+jHYAoIO8w+dAi73taHrHVyqD+h6rOj7p
+=5Tym
 -----END PGP SIGNATURE-----
