@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare unpack
+DEPEND=>=dev-qt/qtcore-4.2:4 >=dev-qt/qtgui-4.7:4 media-libs/alsa-lib media-libs/libsndfile media-sound/jack-audio-connection-kit media-libs/ladspa-sdk >=media-libs/lilv-0.16.0 media-libs/lv2 media-libs/suil dssi? ( media-libs/dssi ) mad? ( media-libs/libmad ) libsamplerate? ( media-libs/libsamplerate ) osc? ( media-libs/liblo ) rubberband? ( media-libs/rubberband ) vorbis? ( media-libs/libvorbis ) zlib? ( sys-libs/zlib ) virtual/pkgconfig
+DESCRIPTION=Qtractor is an Audio/MIDI multi-track sequencer
+EAPI=2
+HOMEPAGE=http://qtractor.sourceforge.net/
+IUSE=debug dssi libsamplerate mad osc rubberband vorbis cpu_flags_x86_sse zlib
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-qt/qtcore-4.2:4 >=dev-qt/qtgui-4.7:4 media-libs/alsa-lib media-libs/libsndfile media-sound/jack-audio-connection-kit media-libs/ladspa-sdk >=media-libs/lilv-0.16.0 media-libs/lv2 media-libs/suil dssi? ( media-libs/dssi ) mad? ( media-libs/libmad ) libsamplerate? ( media-libs/libsamplerate ) osc? ( media-libs/liblo ) rubberband? ( media-libs/rubberband ) vorbis? ( media-libs/libvorbis ) zlib? ( sys-libs/zlib )
+SLOT=0
+SRC_URI=mirror://sourceforge/qtractor/qtractor-0.6.5.tar.gz
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	9e0174de733aecba0a7e66b2b01841d2	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=53a889a115b8bbd22cf18cfc39c9ce7e
