@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/qtractor
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/qtractor/ChangeLog,v 1.61 2015/01/29 18:56:04 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/qtractor/ChangeLog,v 1.62 2015/02/02 18:26:00 aballier Exp $
+
+*qtractor-0.6.5 (02 Feb 2015)
+
+  02 Feb 2015; Alexis Ballier <aballier@gentoo.org> +qtractor-0.6.5.ebuild:
+  version bump
 
   29 Jan 2015; Michał Górny <mgorny@gentoo.org> qtractor-0.6.3.ebuild,
   qtractor-0.6.4.ebuild:
